fix: z-index

--- a/src/blocks/popup/_img/popup_img.css
+++ b/src/blocks/popup/_img/popup_img.css
@@ -1,3 +1,4 @@
 .popup_img {
   background-color: rgba(0, 0, 0, 0.9);
+	z-index: 5;
 }
